--- a/package.json
+++ b/package.json
@@ -83,23 +83,23 @@
     "zone.js": "0.11.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1001.5",
-    "@angular/cli": "10.1.5",
+    "@angular-devkit/build-angular": "0.1102.19",
+    "@angular/cli": "11.2.19",
     "@angular/compiler-cli": "12.2.17",
     "@types/bootstrap": "5.0.0",
     "@types/chartist": "0.11.0",
-    "@types/jasmine": "3.5.14",
+    "@types/jasmine": "~3.6.0",
     "@types/jquery": "3.5.2",
     "@types/node": "14.11.5",
-    "codelyzer": "6.0.1",
-    "jasmine-core": "3.6.0",
-    "jasmine-spec-reporter": "6.0.0",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
     "karma": "5.2.3",
-    "karma-chrome-launcher": "3.1.0",
+    "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "2.0.0",
     "karma-coverage-istanbul-reporter": "3.0.3",
-    "karma-jasmine": "4.0.1",
-    "karma-jasmine-html-reporter": "1.5.4",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "7.0.0",
     "ts-node": "9.0.0",
     "tslint": "6.1.3",
