--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/cdk": "^11.2.13",
     "@angular/common": "12.2.17",
     "@angular/compiler": "12.2.17",
-    "@angular/core": "12.2.17",
+    "@angular/core": "^11.2.14",
     "@angular/forms": "12.2.17",
     "@angular/http": "7.2.16",
     "@angular/localize": "^12.2.17",
@@ -42,15 +42,15 @@
     "bootstrap-notify": "3.1.3",
     "bootstrap-select": "1.13.18",
     "bootstrap-tagsinput": "0.7.1",
-    "chart.js": "2.9.3",
+    "chart.js": "^2.9.4",
     "chartist": "0.11.4",
     "chartist-plugin-zoom": "0.6.0",
     "chartjs-plugin-zoom": "0.7.7",
     "core-js": "3.6.5",
     "datatables": "1.10.18",
     "datatables.net": "1.10.22",
-    "datatables.net-bs": "1.10.22",
-    "datatables.net-bs4": "1.10.22",
+    "datatables.net-bs": "^1.13.5",
+    "datatables.net-bs4": "^1.13.5",
     "datatables.net-colreorder": "1.5.2",
     "datatables.net-colreorder-bs4": "1.5.2",
     "datatables.net-fixedcolumns": "3.3.2",
@@ -62,7 +62,7 @@
     "datatables.net-scroller-bs4": "2.0.3",
     "datatables.net-select-bs4": "1.3.1",
     "easy-pie-chart": "2.1.7",
-    "eonasdan-bootstrap-datetimepicker": "4.17.47",
+    "eonasdan-bootstrap-datetimepicker": "^4.15.35",
     "fullcalendar": "3.10.1",
     "jasny-bootstrap": "4.0.0",
     "jquery": "3.5.1",
@@ -83,24 +83,24 @@
     "zone.js": "0.11.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1102.19",
-    "@angular/cli": "11.2.19",
+    "@angular-devkit/build-angular": "^16.1.4",
+    "@angular/cli": "^16.1.4",
     "@angular/compiler-cli": "12.2.17",
     "@types/bootstrap": "5.0.0",
     "@types/chartist": "0.11.0",
     "@types/jasmine": "~3.6.0",
     "@types/jquery": "3.5.2",
     "@types/node": "14.11.5",
-    "codelyzer": "^6.0.0",
+    "codelyzer": "^0.0.28",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "5.2.3",
+    "karma": "^6.4.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "2.0.0",
     "karma-coverage-istanbul-reporter": "3.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "7.0.0",
+    "protractor": "^3.3.0",
     "ts-node": "9.0.0",
     "tslint": "6.1.3",
     "typescript": "4.3.5"
